# cocotola-1.25

./: .bazelignore  .gitignore  .golangci.yml  .mcp.json  BUILD.bazel  MODULE.bazel  README.md  Taskfile.yml  compose.common-jaeger.yml  compose.common-mysql.yml  compose.test.yml  deps.bzl  go.mod  go.sum  go.work  go.work.sum
cocotola-app/: .mockery.yaml  BUILD.bazel  go.mod  go.sum  main.go
cocotola-app/config/: BUILD.bazel  config.go  config.yml
cocotola-auth/: .mockery.yaml  BUILD.bazel  go.mod  go.sum  main.go
cocotola-auth/config/: BUILD.bazel  config.go  config.yml
cocotola-auth/controller/gin/: BUILD.bazel  app_router.go  guest_handler.go  guest_handler_s_test.go  helper_test.go  init_test.go  mocks_test.go  password_handler.go  profile_handler.go
cocotola-auth/controller/handler/: BUILD.bazel  app_router.go  guest_handler.go  guest_handler_s_test.go  helper_test.go  init_test.go  mocks_test.go  password_handler.go  profile_handler.go
cocotola-auth/controller/middleware/: BUILD.bazel  auth_middleware.go  init.go
cocotola-auth/domain/: BUILD.bazel  guest.go  init.go  init_test.go  organization.go  organization_s_test.go  owner.go  owner_s_test.go  profile.go  rbac.go  space.go  space_s_test.go  system_admin.go  system_admin_s_test.go  system_owner.go  system_owner_s_test.go  system_token.go  user.go  user_group.go  user_group_s_test.go  user_s_test.go
cocotola-auth/gateway/: BUILD.bazel  auth_token_manager.go  auth_token_manager_s_test.go  authorization_manager.go  authorization_manager_m_test.go  gateway_m_test.go  helper_m_test.go  helper_test.go  init.go  init_test.go  model_entity.go  organization_repository.go  organization_repository_m_test.go  pair_of_user_and_group_repository.go  pair_of_user_and_group_repository_m_test.go  rbac_repository.go  rbac_repository_m_test.go  repository_factory.go  space_manager.go  space_manager_m_test.go  space_repository.go  space_repository_m_test.go  user_group_repository.go  user_group_repository_m_test.go  user_repository.go  user_repository_m_test.go  wrapped_db.go
cocotola-auth/initialize/: BUILD.bazel  func.go  init.go  initialize.go
cocotola-auth/openapi/: BUILD.bazel  model_auth_response.go  model_get_my_profile_response.go  model_guest_auth_request.go  model_password_auth_request.go  openapi.go
cocotola-auth/service/: BUILD.bazel  auth_token_manager.go  authorization_manager.go  helper.go  init.go  mocks.go  mocks_test.go  organization_repository.go  pair_of_user_and_group_repository.go  rbac_repository.go  repository_factory.go  space_manager.go  space_repository.go  user_group_repository.go  user_repository.go
cocotola-auth/service/mocks/: BUILD.bazel  RepositoryFactory.go  TransactionManager.go  UserRepository.go
cocotola-auth/usecase/: BUILD.bazel  create_first_owner_command.go  create_first_owner_command_m_test.go  create_organization_command.go  create_organization_command_m_test.go  get_my_profile_query.go  guest_authenticate_command.go  guest_usecase.go  helper.go  init.go  password_authenticate_command.go  password_usecase.go  profile_usecase.go  verify_access_token_query.go  verify_password_command.go  verify_password_command_s_test.go
cocotola-auth/usecase/auth/: BUILD.bazel  auth_usecase.go  auth_verify_access_token_query.go  auth_verify_password_query.go  auth_verify_password_query_s_test.go  init.go  mocks_test.go
cocotola-auth/usecase/guest/: BUILD.bazel  guest_authenticate_command.go  guest_usecase.go
cocotola-auth/usecase/password/: BUILD.bazel  password_authenticate_command.go  password_usecase.go
cocotola-auth/usecase/profile/: BUILD.bazel  get_my_profile_query.go  get_my_profile_query_s_test.go  mocks_test.go  profile_usecase.go
cocotola-init/: .mockery.yaml  BUILD.bazel  go.mod  go.sum  main.go
cocotola-init/config/: BUILD.bazel  config.go  config.yml
cocotola-init/domain/: BUILD.bazel  init.go
cocotola-init/initialize/: BUILD.bazel  helper.go  init.go  initialize.go  initialize_guest.go  initialize_organization.go
cocotola-init/usecase/: BUILD.bazel  create_first_owner_command.go  create_first_owner_command_m_test.go  create_guest_command.go  create_organization_command.go  create_organization_command_m_test.go  create_user.go  helper_test.go  init_test.go
cocotola-lib/controller/: BUILD.bazel  baggage.go  metrics_server.go  web_server.go
cocotola-lib/controller/gin/: BUILD.bazel  cors.go  router.go  server.go  stringutil_test.go
cocotola-lib/controller/handler/: BUILD.bazel  router.go  stringutil_test.go
cocotola-lib/domain/: BUILD.bazel  base_model_s_test.go  init.go  lang_s_test.go  rbac.go
cocotola-lib/gateway/: BUILD.bazel  db.go  db_mysql.go  db_sqlite3.go  db_test.go  init.go  log.go  log_otlp.go  log_uptrace.go  metrics_server.go  multiprocess.go  password_helper.go  signal_watch.go  trace.go  trace_google.go  trace_none.go  trace_otlp.go  trace_stdout.go  trace_uptrace.go  transaction_manager.go
cocotola-lib/gateway/sqlite3/: BUILD.bazel  db_sqlite3_migrate.go
cocotola-lib/process/: BUILD.bazel  metrics_server.go  multiprocess.go  signal_watch.go
cocotola-lib/service/: BUILD.bazel  init.go  transaction_manager.go
moonbeam/: .mockery.yaml  BUILD.bazel  go.mod  go.sum
moonbeam/lib/config/: BUILD.bazel  config_cors.go  config_db_mysql.go  config_db_sqlite3.go  config_log.go  config_trace.go  config_trace_google.go  config_trace_otlp.go  config_trace_uptrace.go  init.go
moonbeam/lib/domain/: BUILD.bazel  base_model.go  base_model_s_test.go  init.go  lang.go  lang_s_test.go
moonbeam/lib/gateway/: BUILD.bazel  db.go  db_mysql.go  db_sqlite3.go  db_test.go  metrics_server.go  signal_watch.go  transaction_manager.go
moonbeam/lib/service/: BUILD.bazel  transaction_manager.go
moonbeam/testlib/gateway/: BUILD.bazel  db.go  db_mysql.go  db_sqlite3.go
moonbeam/user/domain/: BUILD.bazel  init.go  organization.go  organization_s_test.go  owner_s_test.go  space.go  space_s_test.go  system_admin.go  system_admin_s_test.go  system_owner.go  system_owner_s_test.go  user.go  user_group.go  user_group_s_test.go  user_s_test.go
(+131 files in other folders)
