load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cocotola-auth_lib",
    srcs = ["main.go"],
    importpath = "github.com/mocoarow/cocotola-1.25/cocotola-auth",
    visibility = ["//visibility:private"],
    deps = [
        "//cocotola-auth/config",
        "//cocotola-auth/domain",
        "//cocotola-auth/initialize",
        "//cocotola-lib/config",
        "//cocotola-lib/controller/gin",
        "//cocotola-lib/domain",
        "//cocotola-lib/process",
    ],
)

go_binary(
    name = "cocotola-auth",
    embed = [":cocotola-auth_lib"],
    visibility = ["//visibility:public"],
)
