load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cocotola-init_lib",
    srcs = ["main.go"],
    importpath = "github.com/mocoarow/cocotola-1.25/cocotola-init",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cocotola-init",
    embed = [":cocotola-init_lib"],
    visibility = ["//visibility:public"],
)
