load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "moonbeam_lib",
    srcs = ["main.go"],
    importpath = "github.com/mocoarow/cocotola-1.25/moonbeam",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "moonbeam",
    embed = [":moonbeam_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
