load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "domain",
    srcs = [
        "init.go",
        "organization.go",
        "owner.go",
        "rbac.go",
        "space.go",
        "system_admin.go",
        "system_owner.go",
        "system_token.go",
        "user.go",
        "user_group.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/cocotola-auth/domain",
    visibility = ["//visibility:public"],
    deps = ["//cocotola-lib/domain"],
)

smart_go_test(
    name = "domain_test",
    srcs = [
        "organization_s_test.go",
        "owner_s_test.go",
        "space_s_test.go",
        "system_admin_s_test.go",
        "system_owner_s_test.go",
        "user_group_s_test.go",
        "user_s_test.go",
    ],
    deps = [
        ":domain",
        "//cocotola-lib/domain",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
