load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "gateway",
    srcs = [
        "auth_token_manager.go",
        "authorization_manager.go",
        "init.go",
        "model_entity.go",
        "organization_repository.go",
        "pair_of_user_and_group_repository.go",
        "rbac_repository.go",
        "repository_factory.go",
        "space_manager.go",
        "space_repository.go",
        "user_group_repository.go",
        "user_repository.go",
        "wrapped_db.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/cocotola-auth/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/domain",
        "//cocotola-auth/service",
        "//cocotola-lib/domain",
        "//cocotola-lib/gateway",
        "@com_github_casbin_casbin_v2//:casbin",
        "@com_github_casbin_casbin_v2//model",
        "@com_github_casbin_gorm_adapter_v3//:gorm-adapter",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@com_github_pkg_errors//:errors",
        "@io_gorm_gorm//:gorm",
        "@io_opentelemetry_go_otel//:otel",
        "@org_golang_x_crypto//bcrypt",
    ],
)

smart_go_test(
    name = "gateway_test",
    srcs = [
        "auth_token_manager_s_test.go",
        "authorization_manager_m_test.go",
        "gateway_m_test.go",
        "helper_m_test.go",
        "helper_test.go",
        "init_test.go",
        "organization_repository_m_test.go",
        "pair_of_user_and_group_repository_m_test.go",
        "rbac_repository_m_test.go",
        "space_manager_m_test.go",
        "space_repository_m_test.go",
        "user_group_repository_m_test.go",
        "user_repository_m_test.go",
    ],
    deps = [
        ":gateway",
        "//cocotola-auth/domain",
        "//cocotola-auth/service",
        "//cocotola-lib/domain",
        "//cocotola-lib/gateway",
        "//cocotola-lib/testlib/gateway",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_gorm_gorm//:gorm",
    ],
)
