load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "service",
    srcs = [
        "auth_token_manager.go",
        "authorization_manager.go",
        "helper.go",
        "init.go",
        "organization_repository.go",
        "pair_of_user_and_group_repository.go",
        "rbac_repository.go",
        "repository_factory.go",
        "space_manager.go",
        "space_repository.go",
        "user_group_repository.go",
        "user_repository.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/cocotola-auth/service",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/domain",
        "//cocotola-lib/domain",
    ],
)

smart_go_test(
    name = "service_test",
    srcs = ["mocks_test.go"],
    deps = [
        ":service",
        "//cocotola-auth/domain",
        "//cocotola-lib/domain",
        "@com_github_stretchr_testify//mock",
    ],
)
