load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "usecase",
    srcs = [
        "helper.go",
        "password_authenticate_command.go",
        "password_usecase.go",
        "verify_password_command.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/cocotola-auth/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/domain",
        "//cocotola-auth/service",
        "//cocotola-lib/domain",
        "//cocotola-lib/service",
    ],
)

smart_go_test(
    name = "usecase_test",
    srcs = ["verify_password_command_s_test.go"],
    deps = [
        ":usecase",
        "//cocotola-auth/domain",
        "//cocotola-auth/service",
        "//cocotola-auth/service/mocks",
        "//cocotola-lib/domain",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)
