load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "usecase",
    srcs = [
        "get_my_profile_query.go",
        "guest_authenticate_command.go",
        "guest_usecase.go",
        "helper.go",
        "init.go",
        "password_authenticate_command.go",
        "password_usecase.go",
        "profile_usecase.go",
        "verify_access_token_query.go",
        "verify_password_command.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/cocotola-auth/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/domain",
        "//cocotola-auth/service",
        "//cocotola-lib/domain",
        "//cocotola-lib/service",
        "@io_opentelemetry_go_otel//:otel",
    ],
)

smart_go_test(
    name = "usecase_test",
    srcs = ["verify_password_command_s_test.go"],
    deps = [
        ":usecase",
        "//cocotola-auth/domain",
        "//cocotola-auth/service",
        "//cocotola-lib/domain",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)
