load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "usecase",
    srcs = [
        "helper.go",
        "init.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/cocotola-auth/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/domain",
        "//cocotola-auth/service",
        "@io_opentelemetry_go_otel//:otel",
    ],
)
