load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "domain",
    srcs = [
        "base_model.go",
        "init.go",
        "lang.go",
        "rbac.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/cocotola-lib/domain",
    visibility = ["//visibility:public"],
    deps = ["@com_github_go_playground_validator_v10//:validator"],
)

smart_go_test(
    name = "domain_test",
    srcs = [
        "base_model_s_test.go",
        "lang_s_test.go",
    ],
    deps = [
        ":domain",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
