load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "gateway",
    srcs = [
        "db.go",
        "db_mysql.go",
        "db_sqlite3.go",
        "metrics_server.go",
        "multiprocess.go",
        "password_helper.go",
        "signal_watch.go",
        "transaction_manager.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/cocotola-lib/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-lib/controller/gin",
        "//cocotola-lib/domain",
        "//cocotola-lib/gateway/sqlite3",
        "//cocotola-lib/service",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_golang_migrate_migrate_v4//:migrate",
        "@com_github_golang_migrate_migrate_v4//database",
        "@com_github_golang_migrate_migrate_v4//source",
        "@com_github_golang_migrate_migrate_v4//source/iofs",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@io_gorm_gorm//:gorm",
        "@org_golang_x_crypto//bcrypt",
        "@org_golang_x_sync//errgroup",
    ],
)

smart_go_test(
    name = "gateway_test",
    srcs = ["db_test.go"],
    deps = [
        ":gateway",
        "@com_github_go_sql_driver_mysql//:mysql",
    ],
)
