load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "init.go",
        "transaction_manager.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/cocotola-lib/service",
    visibility = ["//visibility:public"],
    deps = ["//cocotola-lib/domain"],
)
