load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = [
        "RepositoryFactory.go",
        "TransactionManager.go",
        "UserRepository.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/cocotola-auth/service/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/domain",
        "//cocotola-auth/service",
        "@com_github_stretchr_testify//mock",
    ],
)
