load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "guest",
    srcs = [
        "guest_authenticate_command.go",
        "guest_usecase.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/cocotola-auth/usecase/guest",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/domain",
        "//cocotola-auth/service",
    ],
)
