load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "gin",
    srcs = [
        "router.go",
        "server.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/cocotola-lib/controller/gin",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-lib/config",
        "//cocotola-lib/controller/gin/middleware",
        "//moonbeam/lib/config",
        "//moonbeam/lib/domain",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_samber_slog_gin//:slog-gin",
        "@io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin//:otelgin",
    ],
)
