load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "config_cors.go",
        "config_db.go",
        "config_db_mysql.go",
        "config_db_sqlite3.go",
        "config_log.go",
        "config_log_otlp.go",
        "config_log_uptrace.go",
        "config_trace.go",
        "config_trace_none.go",
        "config_trace_otlp.go",
        "config_trace_stdout.go",
        "config_trace_uptrace.go",
        "init.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/moonbeam/lib/config",
    visibility = ["//visibility:public"],
    deps = [
        "//moonbeam/lib/domain",
        "@com_github_gin_contrib_cors//:go_default_library",
        "@com_github_glebarez_sqlite//:go_default_library",
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_orandin_slog_gorm//:go_default_library",
        "@com_github_remychantenay_slog_otel//:go_default_library",
        "@io_gorm_driver_mysql//:go_default_library",
        "@io_gorm_gorm//:go_default_library",
        "@io_gorm_plugin_opentelemetry//tracing:go_default_library",
        "@io_opentelemetry_go_contrib_bridges_otelslog//:go_default_library",
        "@io_opentelemetry_go_contrib_processors_baggagecopy//:go_default_library",
        "@io_opentelemetry_go_otel//:go_default_library",
        "@io_opentelemetry_go_otel//propagation:go_default_library",
        "@io_opentelemetry_go_otel//semconv/v1.37.0:go_default_library",
        "@io_opentelemetry_go_otel_exporters_otlp_otlplog_otlploghttp//:go_default_library",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:go_default_library",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp//:go_default_library",
        "@io_opentelemetry_go_otel_exporters_stdout_stdouttrace//:go_default_library",
        "@io_opentelemetry_go_otel_log//global:go_default_library",
        "@io_opentelemetry_go_otel_sdk//resource:go_default_library",
        "@io_opentelemetry_go_otel_sdk//trace:go_default_library",
        "@io_opentelemetry_go_otel_sdk_log//:go_default_library",
    ],
)
