load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "config_cors.go",
        "config_db.go",
        "config_db_mysql.go",
        "config_db_sqlite3.go",
        "config_log.go",
        "config_log_otlp.go",
        "config_log_uptrace.go",
        "config_trace.go",
        "config_trace_google.go",
        "config_trace_none.go",
        "config_trace_otlp.go",
        "config_trace_stdout.go",
        "config_trace_uptrace.go",
        "init.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/moonbeam/lib/config",
    visibility = ["//visibility:public"],
    deps = [
        "//moonbeam/lib/domain",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_glebarez_sqlite//:sqlite",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_googlecloudplatform_opentelemetry_operations_go_exporter_trace//:trace",
        "@com_github_orandin_slog_gorm//:slog-gorm",
        "@com_github_remychantenay_slog_otel//:slog-otel",
        "@io_gorm_driver_mysql//:mysql",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_plugin_opentelemetry//tracing",
        "@io_opentelemetry_go_contrib_bridges_otelslog//:otelslog",
        "@io_opentelemetry_go_contrib_processors_baggagecopy//:baggagecopy",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv/v1.37.0:v1_37_0",
        "@io_opentelemetry_go_otel_exporters_otlp_otlplog_otlploghttp//:otlploghttp",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:otlptracegrpc",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp//:otlptracehttp",
        "@io_opentelemetry_go_otel_exporters_stdout_stdouttrace//:stdouttrace",
        "@io_opentelemetry_go_otel_log//global",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk_log//:log",
    ],
)
