load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "gateway",
    srcs = [
        "db.go",
        "db_mysql.go",
        "db_sqlite3.go",
        "transaction_manager.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/moonbeam/lib/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//moonbeam/lib/gateway/sqlite3",
        "//moonbeam/lib/service",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_golang_migrate_migrate_v4//:migrate",
        "@com_github_golang_migrate_migrate_v4//database",
        "@com_github_golang_migrate_migrate_v4//source",
        "@com_github_golang_migrate_migrate_v4//source/iofs",
        "@io_gorm_gorm//:gorm",
    ],
)

smart_go_test(
    name = "gateway_test",
    srcs = ["db_test.go"],
    deps = [
        ":gateway",
        "@com_github_go_sql_driver_mysql//:mysql",
    ],
)
