load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "gateway",
    srcs = [
        "db.go",
        "db_mysql.go",
        "db_sqlite3.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/moonbeam/testlib/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//moonbeam/lib/domain",
        "//moonbeam/lib/gateway",
        "@com_github_glebarez_sqlite//:sqlite",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_orandin_slog_gorm//:slog-gorm",
        "@io_gorm_driver_mysql//:mysql",
        "@io_gorm_gorm//:gorm",
    ],
)
