load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "domain",
    srcs = [
        "init.go",
        "organization.go",
        "owner.go",
        "space.go",
        "system_admin.go",
        "system_owner.go",
        "user.go",
        "user_group.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.25/moonbeam/user/domain",
    visibility = ["//visibility:public"],
    deps = ["//moonbeam/lib/domain"],
)

smart_go_test(
    name = "domain_test",
    srcs = [
        "organization_s_test.go",
        "owner_s_test.go",
        "space_s_test.go",
        "system_admin_s_test.go",
        "system_owner_s_test.go",
        "user_group_s_test.go",
        "user_s_test.go",
    ],
    deps = [
        ":domain",
        "//moonbeam/lib/domain",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
